<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Facilites.CourseChecker.CourseCheckerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/School"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/school_divison" />

            <Spinner
                android:id="@+id/schooldropdown"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:entries="@array/schooloptions" />

            <TextView
                android:id="@+id/course"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="8dp"
                android:text="@string/select_course"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/coursedropdown"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Year"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:text="@string/select_year"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/yeardropdown"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="8dp"
                android:entries="@array/yearoptions"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Week"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:text="@string/select_week"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/weekdropdown"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="8dp"
                android:entries="@array/weeksOptions"
                android:visibility="visible" />

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/select_day"
                android:visibility="visible" />

            <Spinner
                android:id="@+id/daydropdown"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginTop="8dp"
                android:entries="@array/dayoptions"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/checkButton"
                android:layout_width="137dp"
                android:layout_height="63dp"
                android:background="@drawable/button_check"
                android:contentDescription="@string/check_button"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
