<!-- fragment_display_course_checker.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Display data section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/scroll_course">

        <LinearLayout
            android:id="@+id/lineardisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/filter"
                android:layout_width="382dp"
                android:layout_height="41dp"
                android:text="@string/filters" />

            <Spinner
                android:id="@+id/moduleSpinner"
                android:layout_width="339dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp" />


            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="339dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp" />


            <Spinner
                android:id="@+id/locationSpinner"
                android:layout_width="339dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp" />


            <Spinner
                android:id="@+id/staffSpinner"
                android:layout_width="339dp"
                android:layout_height="50dp" />

            <Space
                android:layout_width="383dp"
                android:layout_height="23dp" />

            <ImageButton
                android:id="@+id/applyButton"
                android:layout_width="192dp"
                android:layout_height="50dp"
                android:background="@drawable/button_apply"
                android:contentDescription="@string/button_apply" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="44dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>